# universal-translation-system

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  END_TO_END_WORKFLOW.md  FAQ.md  GOAL.md  LICENSE  NOTICE  README.md  SECURITY.md  SETUP_COMMANDS.md  Vocabulary_Guide.md  __init__.py  docker-compose.yml  main.py  requirements.txt  run_core_pipeline.sh  run_system.py  run_tests.py  run_training.py  setup.py  uts  version-config.json
.github/: BRANCH_TAG_PROTECTION.md  CONVENTIONAL_COMMITS.md  FUNDING.yml  SETUP_SECRETS.md  dependabot.yml
.vercel/: project.json
Data_Training_markdown/: Adding_New_languages.md  Data Size Flow and Transformation.md  Input_Output Analysis of Data Pipeline Files.md  Streamlined_Training_Workflow.mmd  Streamlined_Training_Workflow2.mmd  future_plan.md  recommendation_by_rank.md  step-by-step Execution flow.md  train_from_scratch.py
android/UniversalTranslationSDK/src/main/cpp/: CMakeLists.txt  jni_wrapper.cpp
archived/: run_system.py
cloud_decoder/: .dockerignore  Dockerfile  __init__.py  build_and_run.sh  decoder_core.py  decoder_server.py  dependencies.py  docker-compose.yml  optimize_decoder.py  optimized_decoder.py  prometheus.yml  quantize_optimize.py  requirements.txt
config/: __init__.py  base.yaml  config_models.py  decoder_config.yaml  deployment_config.yaml  schemas.py  training_a100.yaml  training_a100_fsdp.yaml  training_amd_mi250.yaml  training_colab_free.yaml  training_cpu.yaml  training_generic_gpu.yaml  training_generic_multi_gpu.yaml  training_h100.yaml  training_l4.yaml  training_rtx3060.yaml  training_rtx3080.yaml  training_rtx3090.yaml  training_rtx4090.yaml  training_t4.yaml  training_v100.yaml  training_v100_finetune.yaml
configs/: decoder_pool.json  decoder_pool.sample.json
connector/: __init__.py  pipeline_connector.py  vocabulary_connector.py
coordinator/: __init__.py  advanced_coordinator.py  circuit_breaker.py  main.py
data/: __init__.py  acquire_domain_data.py  config.yaml  custom_samplers.py  data_manager.py  data_pipeline_flow.html  data_utils.py  dataset_classes.py  download_curated_data.py  download_training_data.py  knowledge_distillation.py  pipeline_connector.py  pipeline_orchestrator.py  pipeline_state.py  practical_data_pipeline.py  smart_data_downloader.py  smart_sampler.py  synthetic_augmentation.py  unified_data_downloader.py  unified_data_pipeline.py  vocabulary_connector.py  wikipedia_backtranslation.py
docker/: Dockerfile.cloud  coordinator.Dockerfile  decoder.Dockerfile  docker-compose.yml  encoder.Dockerfile
docs/: .npmrc.ci.example  ACKNOWLEDGMENTS.md  API.md  ARCHITECTURE.md  Adding_New_languages.md  CI_BUILD_UPLOAD.md  CI_CD.md  DECODER_POOL.md  DEPLOYMENT.md  ENVIRONMENT_SETUP.md  GETTING_STARTED.md  IMPROVEMENTS.md  ONBOARDING.md  PERFORMANCE_OPTIMIZATION.md  PUBLISHING.md  REDIS_IMPLEMENTATION_SUMMARY.md  REDIS_INTEGRATION.md  RUNTIME_LAYOUT.md  Roadmap.md  SDK_INTEGRATION.md  SDK_PUBLISHING.md  SECRET_MANAGEMENT.md  SECURITY_BEST_PRACTICES.md  TESTING.md  TRAINING.md  TROUBLESHOOT.md  TUI.md  VERSION_MANAGEMENT.md  VISION.md  Vocabulary_Guide.md  autoscaling.md  environment-variables.md  future_plan.md  train_from_scratch.py
encoder/: __init__.py  adapter_composition.py  custom_layers.py  language_adapters.py  train_adapters.py  train_domain_adapter.py  universal_encoder.py
encoder_core/: CMakeLists.txt
encoder_core/examples/: example_usage.cpp
encoder_core/include/: universal_encoder.h
encoder_core/src/: universal_encoder.cpp  vocabulary_pack.cpp
encoder_core/tests/: CMakeLists.txt
evaluation/: __init_.py  __init__.py  evaluate_model.py  evaluator.py  metrics.py
integration/: __init__.py  connect_all_systems.py  system.py  system_config.py  system_health.py  translation_api.py
ios/: UniversalTranslationSDK.podspec
kubernetes/: coordinator-deployment.yaml  coordinator-hpa.yaml  coordinator-networkpolicy.yaml  coordinator-pdb.yaml  coordinator-podsecurity.yaml  decoder-deployment.yaml  decoder-hpa-custom-metric.yaml  decoder-hpa.yaml  decoder-networkpolicy.yaml  decoder-pdb.yaml  decoder-podsecurity.yaml  decoder-service.yaml  encoder-artifacts-pvc.yaml  encoder-build.yaml  model-storage-pvc.yaml  monitoring-podmonitors.yaml  monitoring-servicemonitors.yaml  namespace.yaml  secrets.example.yaml  vocab-storage-pvc.yaml
monitoring/: README.md  __init__.py  enhanced_metrics.py  health_service.py  metrics.py  metrics_collector.py  system_metrics.py  vocabulary_monitor.py
report/: CODEBASE_ANALYSIS.md  CONSOLIDATION_PLAN.md  CONSOLIDATION_SUMMARY.md  CONSOLIDATION_VERIFICATION_REPORT.md  CURRENT_CODEBASE_WORKFLOW.md  FINAL_CONSOLIDATION_VERIFICATION.md  IMPROVEMENTS_IMPLEMENTED.md  OPTIMIZED_SYSTEM_WORKFLOW.md  SYSTEM_ANALYSIS_REPORT.md  UPDATED_CODEBASE_ANALYSIS.md
requirements/: base.txt  coordinator-dev.txt  coordinator.txt  data.txt  decoder-node.txt  decoder.txt  dev.txt  export.txt  serve.txt  train.txt  tui.txt
scripts/: __init__.py  _shared.py  _wizard_shared.py  build_and_upload_pipeline.py  build_encoder_core.sh  build_models.py  check_dependencies.py  compatibility_checks.py  config_interactive.py  config_wizard.py  data_pipeline_wizard.py  deploy.ps1  deploy.sh  first_time_success.py  generate_quality_data.py  gpu_readiness_check.py  init_env.py  install.sh  multi-GPU_training.ps1  multi-GPU_training.sh  pipeline.py  publish.py  release.ps1  (+14 more)
universal-decoder-node/: Dockerfile  MANIFEST.in  NOTICE  README.md  pyproject.toml  setup.py
universal-decoder-node/tests/: test_decoder.py
universal-decoder-node/udn/: __init__.py  cli.py  config.py  decoder.py  litserve_decoder.py  vocabulary.py
universal-decoder-node/udn/utils/: auth.py  profiler.py  rate_limiter.py  security.py
universal-decoder-node/universal-decoder-node/: __init__.py  cli.py  config.py  decoder.py  litserve_decoder.py  vocabulary.py
universal-decoder-node/universal-decoder-node/utils/: __init__.py  auth.py  https_middleware.py  memory_manager.py  profiler.py  rate_limiter.py
(+468 files in other folders)
