# universal-decoder-node/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-decoder-node"
version = "0.1.0"
description = "High-performance translation decoder service"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Universal Translation System", email = "your.email@example.com"},
]
keywords = ["translation", "decoder", "nlp", "machine-translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/yourusername/universal-decoder-node"
Documentation = "https://github.com/yourusername/universal-decoder-node/wiki"
Repository = "https://github.com/yourusername/universal-decoder-node"
Issues = "https://github.com/yourusername/universal-decoder-node/issues"

[project.scripts]
universal-decoder-node = "universal_decoder_node.cli:cli"
udn = "universal_decoder_node.cli:cli"

[tool.setuptools.packages.find]
include = ["universal_decoder_node*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true