# universal-decoder-node/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-decoder-node"
version = "1.0.0"
description = "High-performance translation decoder service"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Universal Translation System", email = "your.email@example.com"},
]
keywords = ["translation", "decoder", "nlp", "machine-translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
# Runtime dependencies inferred from code (FastAPI app, Torch model, compression, etc.)
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.4.0",
    "PyJWT>=2.8.0",
    "numpy>=1.24.0,<2.0.0",
    "msgpack>=1.0.5",
    "lz4>=4.3.2",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
    "prometheus-client>=0.18.0",
    "python-multipart>=0.0.6",
    "psutil>=5.9.5",
    "tenacity>=8.2.3",
    "orjson>=3.9.10",
    "uvloop>=0.19.0; platform_system != 'Windows'",
    "watchdog>=2.3.0",
    "torch>=2.0.0"
]

[project.urls]
Homepage = "https://github.com/code-with-zeeshan/universal-decoder-node"
Documentation = "https://github.com/code-with-zeeshan/universal-decoder-node/wiki"
Repository = "https://github.com/code-with-zeeshan/universal-decoder-node"
Issues = "https://github.com/code-with-zeeshan/universal-decoder-node/issues"

[project.scripts]
universal-decoder-node = "universal_decoder_node.cli:cli"
udn = "universal_decoder_node.cli:cli"

[tool.setuptools.packages.find]
include = ["universal_decoder_node*"]
exclude = ["tests*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true