# universal-decoder-node/pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universal-decoder-node"
version = "1.0.0"
description = "High-performance translation decoder service"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "Universal Translation System", email = "mohammad.zeeshan@code-with-zeeshan.com"},
]
keywords = ["translation", "decoder", "nlp", "machine-translation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.21.0,<2.0.0",
    "msgpack>=1.0.0",
    "lz4>=4.3.2",
    "fastapi==0.104.1",
    "uvicorn[standard]==0.24.0.post1",
    "pydantic==2.5.3",
    "click>=8.1.0",
    "requests>=2.31.0",
    "PyYAML>=6.0.0",
    "docker>=6.1.0",
    "prometheus-client==0.19.0",
    "PyJWT==2.8.0",
    "python-multipart==0.0.6",
    "aiofiles>=23.2.0"
]

[project.urls]
Homepage = "https://github.com/code-with-zeeshan/universal-translation-system/tree/main/universal-decoder-node"
Documentation = "https://github.com/code-with-zeeshan/universal-translation-system/tree/main/universal-decoder-node#readme"
Repository = "https://github.com/code-with-zeeshan/universal-translation-system"
Issues = "https://github.com/code-with-zeeshan/universal-translation-system/issues"

[project.scripts]
udn = "udn.cli:cli"

[tool.setuptools.packages.find]
include = ["udn*"]
exclude = ["tests*"]

[project.optional-dependencies]
perf = [
  "orjson>=3.9.10",
  "uvloop>=0.19.0; platform_system != 'Windows'",
  "tenacity>=8.2.3",
  "watchdog>=2.3.0",
  "zeroconf>=0.132.0",
]
dev = [
  "pytest>=7.4.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.10.0",
  "isort>=5.12.0",
  "mypy>=1.6.0",
  "pre-commit>=3.5.0",
]
gpu = [
  "triton>=2.1.0",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
